# Compass

./: .gitignore  ARCHIVED.md  LICENSE  OPENCLAW.md  P5.1_COVERAGE_GAP_REPORT.md  README.md  TEST_MAP.md
compass-api/: pyproject.toml  vault
compass-api/src/: __init__.py  config.py  main.py  mcp.py
compass-api/src/api/: agent.py  decay.py  entities.py  evolution.py  feed.py  fetch.py  graph.py  insights.py  scores.py
compass-api/src/core/: rust_client.py
compass-api/src/db/: database.py  schema.sql
compass-api/src/services/: filewatcher.py
compass-api/tests/: conftest.py
compass-api/tests/integration/: __init__.py  test_api_agent.py  test_api_entities.py  test_api_insights.py  test_api_scores.py  test_database.py  test_fts_triggers.py
compass-api/tests/unit/: __init__.py
compass-core/: .gitignore  Cargo.toml  compass.toml
compass-core/fixtures/phase4/: error.json  related-suggestion.json  tag-suggestion.json  weekly-report.json
compass-core/src/: api.rs  config.rs  contracts.rs  db.rs  e2e_tests.rs  frontmatter.rs  main.rs  models.rs  reference.rs  rpc.rs  scheduler.rs  scoring.rs  watcher.rs
compass-core/src/application/: entity_service.rs  error.rs  index_service.rs  mod.rs  ports.rs  query_service.rs  suggestion_service.rs
compass-core/src/domain/: contracts.rs  entity.rs  mod.rs  scoring.rs  vault.rs
compass-core/src/infrastructure/: database_files.rs  mod.rs  sqlite_repository.rs  vault_adapter.rs
compass-core/src/transport/: http.rs  mod.rs
compass-vue3/: index.html  package-lock.json  package.json  tsconfig.app.json
docs/: ARCHITECTURE.md  GITHUB_WORKFLOW.md  PHASE1_4_TEST_REPORT.md  PHASE4_PREP.md  PLAN.md  PRD.md  PRD_v2.1.md  PRD_v2.md  PRD_v3.0.md  REVIEW_T1.4.md  REVIEW_T1.5.md  REVIEW_T1.6.md  REVIEW_T1.7_T1.8.md  REVIEW_T2.1.md  REVIEW_T2.2.md  REVIEW_T2.3.md  REVIEW_T2.4.md  REVIEW_T2.5.md  REVIEW_T3.1_T3.2.md  REVIEW_trigger_wiring.md  REVIEW_整体分析结论.md  TDD.md  TEST_CASES.md  VAULT_BACKUP.md  VAULT_SYNC.md  dataview-queries.md
scripts/: Backup-CompassVault.ps1  Install-CompassVaultBackupTask.ps1  Test-CompassVaultBackup.ps1
web/: app.js  index.html  style.css
(+67 files in other folders)
