[project]
name = "compass_api"
version = "0.1.0"
description = "Compass API — Python glue layer for compass-core"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "watchdog>=4.0.0",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.0",
    "lark-oapi>=1.5.0,<1.6.0",
]

[project.scripts]
compass-api  = "src.main:run"
compass-watch = "src.services.filewatcher:run_watcher"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "black>=25.0.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = ["ANN101", "ANN102", "COM812", "ISC001"]

[tool.mypy]
python_version = "3.11"
strict = true
