[package]
name = "compass_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
