[package]
name = "compass"
version = "0.1.0"
edition = "2021"
description = "Compass — 评分引力场引擎（纯 Rust 单二进制）"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
